[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Level.gd" type="Script" id=1]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Control"]
margin_left = 234.306
margin_top = 90.4262
margin_right = 412.306
margin_bottom = 127.426

[node name="Button" type="Button" parent="Control/OptionButton"]
margin_left = 2.1091
margin_top = 201.354
margin_right = 175.109
margin_bottom = 251.354
text = "Generar"

[node name="Label" type="Label" parent="Control/OptionButton/Button"]
margin_left = -0.790833
margin_top = -99.009
margin_right = 173.209
margin_bottom = -56.009
text = "5X5"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control/OptionButton/Button"]
margin_left = -72.9271
margin_top = -243.336
margin_right = -9.92706
margin_bottom = -226.336
text = "Cifras Der."
align = 1
valign = 1

[node name="Label3" type="Label" parent="Control/OptionButton/Button"]
margin_left = -72.9271
margin_top = -272.291
margin_right = -9.92706
margin_bottom = -255.291
text = "Cifras Izq."
align = 1
valign = 1

[node name="RightExp" type="TextEdit" parent="Control"]
margin_left = 231.0
margin_top = 46.0
margin_right = 412.0
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftExp" type="TextEdit" parent="Control"]
margin_left = 231.0
margin_top = 17.0
margin_right = 411.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/OptionButton/Button" to="." method="_on_Button_pressed"]
